--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,4 +22,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: cd ng-dashboard
     - run: npm install
-    - run: ng build --prod
+    - run: npm test
