--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,3 +22,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: cd ng-dashboard
     - run: npm install
+    - run: npm run build
+    - run: npm test
